
set(NAME em_test)

add_executable(${NAME}
  em_test.cpp
)

#======================

set(NAME parser)

add_executable(${NAME}
  parser.cpp
)

#======================

set(NAME sorter)

add_executable(${NAME}
  sorter.cpp
)

#======================

set(NAME biller)

add_executable(${NAME}
  biller.cpp
)

#======================
